--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -23,9 +24,9 @@
     <!-- NAVBAR -->
     <nav>
         <div class="row justify-content-between">
-            
+
             <div class="col-7">
-                <div class="row align-item-center">
+                <div class="row align-items-center">
                     <div class="col">
                         <img src="img/play_logo.svg" alt="">
                     </div>
@@ -38,7 +39,7 @@
             </div>
 
             <div class="col-3">
-                <div class="row align-item-center">
+                <div class="row align-items-center">
                     <div class="col">My PlayStation<i class="fas fa-sort-down"></i></div>
                     <div class="col">
                         <button>Accedi</button>
@@ -51,6 +52,28 @@
 
         </div>
     </nav>
-    
+
+
+
+    <!-- JUMBOTRON -->
+    <div class="jumbotron-fluid">
+        <div class="container">
+            <div class="row align-items-end">
+                <div class="col-12 col-lg-5">
+                    <img class="returnal" src="img/returnal-hero-banner-logo.png" alt="">
+                    <h1>Rompi il cerchio</h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto quia hic dolore, consectetur
+                        magni omnis aliquam rerum nulla sunt autem reiciendis itaque atque reprehenderit corporis quo
+                        dolorem impedit perspiciatis totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Minima recusandae cupiditate aspernatur adipisci iure, quibusdam neque quidem provident. Eaque
+                        praesentium, perferendis id quae tenetur dicta repellat nemo laborum dolorum? Similique.</p>
+                    <button>Acquista ora</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 </body>
+
 </html>
