--- a/index.html
+++ b/index.html
@@ -59,20 +59,67 @@
     <div class="jumbotron-fluid">
         <div class="container">
             <div class="row align-items-end">
-                <div class="col-12 col-lg-5">
+                <div class="col-12 col-lg-6">
                     <img class="returnal" src="img/returnal-hero-banner-logo.png" alt="">
                     <h1>Rompi il cerchio</h1>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto quia hic dolore, consectetur
                         magni omnis aliquam rerum nulla sunt autem reiciendis itaque atque reprehenderit corporis quo
-                        dolorem impedit perspiciatis totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Minima recusandae cupiditate aspernatur adipisci iure, quibusdam neque quidem provident. Eaque
-                        praesentium, perferendis id quae tenetur dicta repellat nemo laborum dolorum? Similique.</p>
+                        dolorem impedit perspiciatis totam.</p>
                     <button>Acquista ora</button>
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- ITEM UNDER JUMBOTRON -->
+    <div class="container items-under-jumbotron">
+        <div class="row">
+            <div class="col-6 col-sm-4 col-lg-2">
+                <div class="item-white-under-jumbotron">
+                    <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                </div>
+            </div>
+            <div class="col-6 col-sm-4 col-lg-2">
+                <div class="item-white-under-jumbotron">
+                    <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                </div>
+            </div>
+            <div class="col-6 col-sm-4 col-lg-2">
+                <div class="item-white-under-jumbotron">
+                    <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                </div>
+            </div>
+            <div class="col-6 col-sm-4 col-lg-2">
+                <div class="item-white-under-jumbotron">
+                    <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                </div>
+            </div>
+            <div class="col-6 col-sm-4 col-lg-2">
+                <div class="item-white-under-jumbotron">
+                    <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                </div>
+            </div>
+            <div class="col-6 col-sm-4 col-lg-2">
+                <div class="item-white-under-jumbotron">
+                    <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                </div>
+            </div>
+            
+        </div>
+    </div>
+
+
+
+    <!-- TEXT UNDER JUMBOTRON -->
+    <div class="container">
+        <div class="row text-center">
+            <div class="col-12">
+                <div class="text-color-blue">PLAY HAS NO LIMITS</div>
+                <h1>Ecco la PlayStation 5</h1>
+                <div class="text-color-grey">Tuffati in nuove possibilità di gioco completamente inaspettate</div>
+            </div>
+        </div>
+    </div>
 
 </body>
 
