--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto quia hic dolore, consectetur
                         magni omnis aliquam rerum nulla sunt autem reiciendis itaque atque reprehenderit corporis quo
                         dolorem impedit perspiciatis totam.</p>
-                    <button>Acquista ora</button>
+                    <button class="button-default">Acquista ora</button>
                 </div>
             </div>
         </div>
@@ -108,15 +108,71 @@
         </div>
     </div>
 
-
-
     <!-- TEXT UNDER JUMBOTRON -->
-    <div class="container">
+    <div class="container container-text-under-jumbotron">
         <div class="row text-center">
             <div class="col-12">
                 <div class="text-color-blue">PLAY HAS NO LIMITS</div>
                 <h1>Ecco la PlayStation 5</h1>
                 <div class="text-color-grey">Tuffati in nuove possibilità di gioco completamente inaspettate</div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <!-- CONSOLE PLAYSTATION 5 -->
+    <div class="container container-console-playstation-5">
+        <div class="row align-items-center">
+            <div class="col-12 col-md-5">
+                <h1>Console PlayStation 5</h1>
+                <div>Sperimenta la nuova generazione di incredibili giochi PlayStation.</div>
+                <button class="button-default">Maggiori informazioni</button>
+            </div>
+            <div class="col-12 col-md-7">
+                <img src="img/playstation-5-thumb.png" alt="">
+            </div>
+        </div>
+    </div>
+
+
+
+    <!-- ITEM UNDER CONSOLE PLAYSTATION 5 -->
+    <div class="container container-item-under-console-playstation-5">
+        <div class="row">
+            <div class="col-12 col-md">
+                <div class="row">
+                    
+                    <div class="col-4 col-md">
+                        <div class=" item-under-console-playstation-5">
+                            <img src="img/playstation-5-thumb.png" alt="">
+                        </div>
+                    </div>
+
+                    <div class="col-4 col-md">
+                        <div class=" item-under-console-playstation-5">
+                            <img src="img/joypad-thumb.png" alt="">
+                        </div>
+                    </div>
+
+                    <div class="col-4 col-md">
+                        <div class=" item-under-console-playstation-5">
+                            <img src="img/headset-thumb.png" alt="">
+                        </div>
+                    </div>
+
+                    <div class="col-4 col-md">
+                        <div class=" item-under-console-playstation-5">
+                            <img src="img/remote-thumb.png" alt="">
+                        </div>
+                    </div>
+
+                    <div class="col-4 col-md">
+                        <div class=" item-under-console-playstation-5">
+                            <img src="img/camera-thumb.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
