--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 
     <!-- JUMBOTRON -->
     <div class="jumbotron-fluid">
-        <div class="container">
-            <div class="row align-items-end">
-                <div class="col-12 col-lg-6">
+        <div class="container container-jumbotron">
+            <div class="row align-items-end container-jumbotron">
+                <div class="col-12 col-lg-4">
                     <img class="returnal" src="img/returnal-hero-banner-logo.png" alt="">
                     <h1>Rompi il cerchio</h1>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto quia hic dolore, consectetur
@@ -176,6 +176,36 @@
             </div>
         </div>
     </div>
+
+
+
+    <!-- IT TAKES TWO -->
+    <div class="container-fluid-it-takes-two">
+        <div class="container container-it-takes-two">
+            <div class="row align-items-end container-it-takes-two">
+                <div class="col-12 col-lg-4">
+                    <img class="it-takes-two" src="img/it-takes-two-logo.png" alt="">
+                    <h1>Un'avventura cooperativa selvaggia ti attende</h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto quia hic dolore, consectetur
+                        magni omnis aliquam rerum nulla sunt autem reiciendis itaque atque reprehenderit corporis quo
+                        dolorem impedit perspiciatis totam.</p>
+                    <button class="button-default">Acquista ora</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <!-- NUOVE USCITE -->
+    <div class="container-fluid-nuove-uscite">
+        <div class="container">
+            <h2>Nuove uscite</h2>
+            <h3>Giochi incredibili per PS4 e PS5 disponibili ora</h3>
+        </div>
+    </div>
+
+
 
 </body>
 
