--- a/index.html
+++ b/index.html
@@ -201,7 +201,70 @@
     <div class="container-fluid-nuove-uscite">
         <div class="container">
             <h2>Nuove uscite</h2>
-            <h3>Giochi incredibili per PS4 e PS5 disponibili ora</h3>
+            <h4>Giochi incredibili per PS4 e PS5 disponibili ora</h4>
+            <div class="row">
+                
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                    <h5>Tony Hawk's™ Pro Skater™ 1 + 2</h5>                
+                </div>
+
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                    <h5>Crash Bandicoot 4: It's About Time</h5>                
+                </div>
+
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                    <h5>Tony Hawk's™ Pro Skater™ 1 + 2</h5>                
+                </div>
+
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                    <h5>Crash Bandicoot 4: It's About Time</h5>                
+                </div>
+
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                    <h5>Tony Hawk's™ Pro Skater™ 1 + 2</h5>                
+                </div>
+
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                    <h5>Crash Bandicoot 4: It's About Time</h5>                
+                </div>
+
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                    <h5>Tony Hawk's™ Pro Skater™ 1 + 2</h5>                
+                </div>
+
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                    <h5>Crash Bandicoot 4: It's About Time</h5>                
+                </div>
+
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                    <h5>Tony Hawk's™ Pro Skater™ 1 + 2</h5>                
+                </div>
+
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                    <h5>Crash Bandicoot 4: It's About Time</h5>                
+                </div>
+
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                    <h5>Tony Hawk's™ Pro Skater™ 1 + 2</h5>                
+                </div>
+
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                    <h5>Crash Bandicoot 4: It's About Time</h5>                
+                </div>
+
+            </div>
         </div>
     </div>
 
