--- a/index.html
+++ b/index.html
@@ -129,7 +129,12 @@
                 <div>Sperimenta la nuova generazione di incredibili giochi PlayStation.</div>
                 <button class="button-default">Maggiori informazioni</button>
             </div>
-            <div class="col-12 col-md-7">
+            <div class="col-12 col-md-7 play-5-console">
+                <img src="img/playstation-5-thumb.png" alt="">
+            </div>
+
+            <!-- HOVER IMG .play-5-console -->
+            <div class="item-under-console-playstation-5-1">
                 <img src="img/playstation-5-thumb.png" alt="">
             </div>
         </div>
@@ -144,31 +149,31 @@
                 <div class="row">
 
                     <div class="col-4 col-md">
-                        <div class=" item-under-console-playstation-5">
+                        <div class=" item-under-console-playstation-5-1">
                             <img src="img/playstation-5-thumb.png" alt="">
                         </div>
                     </div>
 
                     <div class="col-4 col-md">
-                        <div class=" item-under-console-playstation-5">
+                        <div class=" item-under-console-playstation-5-2">
                             <img src="img/joypad-thumb.png" alt="">
                         </div>
                     </div>
 
                     <div class="col-4 col-md">
-                        <div class=" item-under-console-playstation-5">
+                        <div class=" item-under-console-playstation-5-3">
                             <img src="img/headset-thumb.png" alt="">
                         </div>
                     </div>
 
                     <div class="col-4 col-md">
-                        <div class=" item-under-console-playstation-5">
+                        <div class=" item-under-console-playstation-5-4">
                             <img src="img/remote-thumb.png" alt="">
                         </div>
                     </div>
 
                     <div class="col-4 col-md">
-                        <div class=" item-under-console-playstation-5">
+                        <div class=" item-under-console-playstation-5-5">
                             <img src="img/camera-thumb.jpg" alt="">
                         </div>
                     </div>
