--- a/index.html
+++ b/index.html
@@ -124,19 +124,16 @@
     <!-- CONSOLE PLAYSTATION 5 -->
     <div class="container container-console-playstation-5">
         <div class="row align-items-center">
+            
             <div class="col-12 col-md-5">
                 <h1>Console PlayStation 5</h1>
                 <div>Sperimenta la nuova generazione di incredibili giochi PlayStation.</div>
                 <button class="button-default">Maggiori informazioni</button>
             </div>
-            <div class="col-12 col-md-7 play-5-console">
+            <div class="col-12 col-md-7">
                 <img src="img/playstation-5-thumb.png" alt="">
             </div>
 
-            <!-- HOVER IMG .play-5-console -->
-            <div class="item-under-console-playstation-5-1">
-                <img src="img/playstation-5-thumb.png" alt="">
-            </div>
         </div>
     </div>
 
@@ -149,31 +146,31 @@
                 <div class="row">
 
                     <div class="col-4 col-md">
-                        <div class=" item-under-console-playstation-5-1">
+                        <div class=" item-under-console-playstation-5">
                             <img src="img/playstation-5-thumb.png" alt="">
                         </div>
                     </div>
 
                     <div class="col-4 col-md">
-                        <div class=" item-under-console-playstation-5-2">
+                        <div class=" item-under-console-playstation-5">
                             <img src="img/joypad-thumb.png" alt="">
                         </div>
                     </div>
 
                     <div class="col-4 col-md">
-                        <div class=" item-under-console-playstation-5-3">
+                        <div class=" item-under-console-playstation-5">
                             <img src="img/headset-thumb.png" alt="">
                         </div>
                     </div>
 
                     <div class="col-4 col-md">
-                        <div class=" item-under-console-playstation-5-4">
+                        <div class=" item-under-console-playstation-5">
                             <img src="img/remote-thumb.png" alt="">
                         </div>
                     </div>
 
                     <div class="col-4 col-md">
-                        <div class=" item-under-console-playstation-5-5">
+                        <div class=" item-under-console-playstation-5">
                             <img src="img/camera-thumb.jpg" alt="">
                         </div>
                     </div>
