--- a/index.html
+++ b/index.html
@@ -33,27 +33,27 @@
             <div class="collapse navbar-collapse" id="navbarsExample05">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-bs-toggle="dropdown"
+                        <a class="nav-link icon-navbar" href="#" id="dropdown05" data-bs-toggle="dropdown"
                             aria-expanded="false">Giochi</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-bs-toggle="dropdown"
+                        <a class="nav-link icon-navbar" href="#" id="dropdown05" data-bs-toggle="dropdown"
                             aria-expanded="false">Hardware</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-bs-toggle="dropdown"
+                        <a class="nav-link icon-navbar" href="#" id="dropdown05" data-bs-toggle="dropdown"
                             aria-expanded="false">Servizi</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-bs-toggle="dropdown"
+                        <a class="nav-link icon-navbar" href="#" id="dropdown05" data-bs-toggle="dropdown"
                             aria-expanded="false">Novità</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-bs-toggle="dropdown"
+                        <a class="nav-link icon-navbar" href="#" id="dropdown05" data-bs-toggle="dropdown"
                             aria-expanded="false">Fai acquisti</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-bs-toggle="dropdown"
+                        <a class="nav-link icon-navbar" href="#" id="dropdown05" data-bs-toggle="dropdown"
                             aria-expanded="false">Dropdown</a>
                     </li>
                 </ul>
@@ -62,7 +62,7 @@
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-bs-toggle="dropdown"
+                            <a class="nav-link icon-navbar" href="#" id="dropdown05" data-bs-toggle="dropdown"
                                 aria-expanded="false">My Playstation</a>
                         </li>
                         <button class="button-default">Accedi</button>
