htmlcss-playstation-JS

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <!-- HEADER -->
     <header>
         <img src="img/sony_logo.svg" alt="">
+        <h1 id="js-word"></h1>
+        <script type="text/javascript" src="js/script.js"></script>
+
     </header>
 
 
